# op-s8-voting-calc

./: .gitignore  README.md  cli.py  graphqleas_client.py  jsonrpc_client.py  onchain_config.yaml  pyproject.toml  requirements.txt  setup.cfg  utils.py
op_s8_vote_calc/: attestations.py  calc.py  calc_approval.py  calc_basic.py  calc_optimistic.py  cli.py  decode_creates.py  graphqleas_client.py  jsonrpc_client.py  signatures.py  utils.py
op_s8_vote_calc/abis/main/: alligator.json  gov.json  ptc.json
op_s8_vote_calc/abis/test/: alligator.json  ptc.json
op_s8_vote_calc/config/: offchain_config.yaml  onchain_config.yaml
